Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/CommitJobTemplateOverride__c.field-meta.xml
<CustomField>
    <fullName>CommitJobTemplateOverride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a Job Template to override the default Commit Job Template defined in the Pipeline</description>
    <inlineHelpText>Select a Job Template to override the default Commit Job Template defined in the Pipeline</inlineHelpText>
    <label>Commit Job Template Override</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Environments (Commit Job Template Override)</relationshipLabel>
    <relationshipName>Environments2</relationshipName>
    <type>Lookup</type>
</CustomField>