Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Compliance_Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Rule Group</label>
    <referenceTo>Compliance_Rule_Group__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>