Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Compliance_Scan_Events__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Scan_Events__c</fullName>
    <label>Compliance Scan Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployments</fullName>
            </value>
            <value>
                <fullName>Commits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>