Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Connection_Behavior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default Behavior for Connections into this Environment</description>
    <label>Incoming Connection Behavior</label>
    <referenceTo>Connection_Behavior__c</referenceTo>
    <relationshipLabel>Environment Default Behavior</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>