Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Current_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Current_Code_Coverage__c</fullName>
    <label>Current Code Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>