Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Current_SCA_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_SCA_Score__c</fullName>
    <inlineHelpText>Current Static Code Analysis Score</inlineHelpText>
    <label>Current SCA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>