Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Deployment_Job_Template_Override__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Job_Template_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Job Template Override</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Environments (Deployment Job Template Override)</relationshipLabel>
    <relationshipName>Environments1</relationshipName>
    <type>Lookup</type>
</CustomField>