Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Enable_Rollback__c.field-meta.xml
<CustomField>
    <fullName>Enable_Rollback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Rollbacks for any Deployments/Promotions have this Environment as destination. Rollbacks will be available for Deployments/Promotions created after this feature is enabled</description>
    <inlineHelpText>Enable Rollbacks for any Deployments/Promotions have this Environment as destination. Rollbacks will be available for Deployments/Promotions created after this feature is enabled</inlineHelpText>
    <label>Enable Rollback</label>
    <type>Checkbox</type>
</CustomField>