Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Index_Back_Promotion_metadata__c.field-meta.xml
<CustomField>
    <fullName>Index_Back_Promotion_metadata__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If enabled, when a Back Promotion is completed and contains Metadata found in User Stories in the destination Environment, the status of the User Story Metadata records of these User Stories will be updated to &quot;Back Promoted&quot;.</inlineHelpText>
    <label>Index Back Promotion Metadata</label>
    <type>Checkbox</type>
</CustomField>