Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <label>Last Refresh Date</label>
    <type>Date</type>
</CustomField>