Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Latest_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>