Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Latest_Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Deployment_Status__c</fullName>
    <label>Latest Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
            <value>
                <fullName>Merge Conflict</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>