Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Maximum_SCA_Score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_SCA_Score__c</fullName>
    <inlineHelpText>Maximum Static Code Analysis Score</inlineHelpText>
    <label>Maximum SCA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>