Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <inlineHelpText>If you&apos;re developing managed packages, this will help you to write only one version of the pre/post Apex Code in Selenium Test Suites. Copado will replace any &quot;{!NS}&quot; text with this value.</inlineHelpText>
    <label>Namespace</label>
    <length>128</length>
    <type>Text</type>
</CustomField>