Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>