Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Promotion_Job_Template_Override__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Job_Template_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Job Template Override</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>