Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Run_all_tests__c.field-meta.xml
<CustomField>
    <fullName>Run_all_tests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, &quot;Run all local tests&quot; will be enforced when deploying to this environment.</inlineHelpText>
    <label>Run all local tests</label>
    <type>Checkbox</type>
</CustomField>