Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production/Developer</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Scratch Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>