Dummy_Package_for_scratch_org/main/default/objects/Environment__c/fields/Validation_Promotion_Default_Credential__c.field-meta.xml
<CustomField>
    <fullName>Validation_Promotion_Default_Credential__c</fullName>
    <inlineHelpText>The Default Credential for the target Org is always selected by default. Optionally, the Default Credential can be selected only if the user has no Org Credential for the target Org.</inlineHelpText>
    <label>Validation Promotion Default Credential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>Only If User Has No Org Credential</fullName>
            </value>
            <value>
                <fullName>All Validation Promotions</fullName>
                <isActive>false</isActive>
                <label>All Validation Promotions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>