Dummy_Package_for_scratch_org/main/default/objects/Environment__c/validationRules/Unique_Template_for_promote_and_deploy.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Template_for_promote_and_deploy</fullName>
    <active>true</active>
    <description>An environment cannot have the same automation template for both Promote and Deploy</description>
    <errorConditionFormula>AND(
   NOT(ISBLANK(Promotion_Override__c)),
   Promotion_Override__c == Deployment_Automation_Override__c
)</errorConditionFormula>
    <errorDisplayField>Deployment_Automation_Override__c</errorDisplayField>
    <errorMessage>An environment cannot have the same automation template for both Promote and Deploy</errorMessage>
</ValidationRule>